[package]
name = "adw-window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.2", package = "libadwaita" }
gtk = { version = "0.5", package = "gtk4" }

[profile.release]
lto = true
strip = true
